# tcr-gameshow-template

./: CONTRIBUTING.md  README.md  env.sh  main.py  scoreboard  setup.sh  tcr  tcr-timer  tcr.sh  test_main.py
python/: coverage  main.py  pyproject.toml  setup.sh  tcr  tcr-timer  test
